# openai-kira

./: .gitignore  README.md  pyproject.toml  setup.py
src/openai_kira/: __init__.py
src/openai_kira/Chat/: Optimizer.py  __init__.py  types.py
src/openai_kira/Chat/module/plugin/: _plugin_tool.py  details.py  duckgo.py  search.py
src/openai_kira/Chat/text_analysis_tools/api/sentiment/: sentiment.py
src/openai_kira/resouce/: __init__.py  completion.py  moderations.py
src/openai_kira/utils/: Talk.py  chat.py  data.py  setting.py
test/: test.py  test_langchain.py
