[tool.poetry]
name = "openai-kira"
version = "0.1.2"
description = "A chat client"
authors = ["sudoskys <coldlando@hotmail.com>"]
maintainers = [
    "sudoskys <coldlando@hotmail.com>"
]
repository = "https://github.com/sudoskys/openai-kira"
license = "MIT"
readme = "README.md"
packages = [{ include = "openai_kira", from = "src" }]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.23.1"
redis = "^4.4.0"
nltk = "^3.8"
pillow = "^9.3.0"
jieba = "^0.42.1"
transformers = "^4.25.1"
beautifulsoup4 = "^4.11.1"
pydantic = "^1.10.4"
loguru = "^0.6.0"
elara = "^0.5.4"
openai-async = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
